@@ -1,19 +1,11 @@
 #include "config.h"
 
+#include "libport/network.h"
+
 #ifdef WIN32
-# ifndef _WIN32_WINNT
-#  define _WIN32_WINNT 0x0400
-# endif
-# define GROUP __GROUP
-# define _WIN32_WINNT 0x0400
-# include <winsock2.h>
-# undef GROUP
 # define YYTOKENTYPE
-#else
-# include <sys/types.h>
-# include <sys/socket.h>
-# include <unistd.h>
 #endif
+
 #include "network/bsdnet/connection.hh"
 
 extern UServer * THESERVER;
