@@ -3,22 +3,10 @@
 
 # include "config.h"
 
+# include "libport/network.h"
+
 # ifdef WIN32
-#  ifndef _WIN32_WINNT
-#   define _WIN32_WINNT 0x0400
-#  endif
-#  define GROUP __GROUP
-#  include <winsock2.h>
-#  undef GROUP
 #  define YYTOKENTYPE
-typedef int socklen_t;
-# else
-#  include <sys/types.h>
-#  include <sys/socket.h>
-#  include <arpa/inet.h>
-#  include <netdb.h>
-#  include <netinet/in.h>
-#  include <sys/select.h>
 # endif
 
 # include "uconnection.hh"
@@ -34,23 +22,23 @@ namespace Network
     Pipe() {}
     virtual ~Pipe() {}
     //returns read fd or -1 if none
-    virtual int readFD()=0;
-    virtual int writeFD()=0;
+    virtual int readFD() = 0;
+    virtual int writeFD() = 0;
 
-    virtual void notifyRead()=0;
-    virtual void notifyWrite()=0;
+    virtual void notifyRead() = 0;
+    virtual void notifyWrite() = 0;
     void trigger(); ///< trigger demuxer fd set reload
 
     int controlFd;
   };
 
   //build the two fd_sets according to registered connections
-  int buildFD(fd_set &rd, fd_set &wr);
+  int buildFD(fd_set& rd, fd_set& wr);
   //notify the Pipe object associed with fd sets in the list
-  void notify(fd_set &rd, fd_set &wr);
+  void notify(fd_set& rd, fd_set& wr);
 
-  void registerNetworkPipe(Pipe *p);
-  void unregisterNetworkPipe(Pipe *p);
+  void registerNetworkPipe(Pipe* p);
+  void unregisterNetworkPipe(Pipe* p);
 
   bool createTCPServer(int port);
 
