@@ -1,3 +1,13 @@
+2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
+	Fixes for Windows.
+	* src/network/bsdnet/connection.cc: Use libport's windows.h.
+	* src/console.cc: Ditto.
+	* src/network/bsdnet/connection.hh: Aesthetic change.
+	* src/network/bsdnet/network.hh: Use libport's network.h.
+	* src/network/bsdnet/network.cc: Fix includes.
+	* src/uconnection.cc: Fix initialization order.
+
 2006-12-07  Razik Yousfi  <yousfi@gostai.com>
 
 	Use ucopy in copy methods.
